<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BootUnlocker</string>
    <string name="welcome_text">BootUnlocker allows you to lock and unlock your bootloader from within Android, without rebooting your device, and without a USB connection. <i>BootUnlocker does NOT wipe your data.</i></string>
    <string name="tamper_text">Some newer device bootloaders set a tamper flag if it has ever been unlocked/altered. BootUnlocker allows you to change this state.</string>
    <string name="root_required">Root is <b>REQUIRED</b> for this application.</string>
    <string name="verb_lock">Lock</string>
    <string name="verb_unlock">Unlock</string>
    <string name="bootloader_status">Bootloader Status</string>
    <string name="stat_locked">Locked</string>
    <string name="stat_unlocked">Unlocked</string>
    <string name="stat_no_root">No root access</string>
    <string name="stat_unknown_device">Unsupported device</string>
    <string name="stat_tampered">Tampered</string>
    <string name="stat_not_tampered">Untampered</string>
    <string name="waiting_for_root">Waiting for root…</string>
    <string name="extra_unknown_device">Device “%1$s"” not supported.</string>
    <string name="version">App Version</string>
    <string name="device">Device</string>
    <string name="bootloader">Bootloader</string>
    <string name="tamper_flag">Tamper Flag</string>
    <string name="verb_clear_tamper">Untamper</string>
    <string name="verb_set_tamper">Tamper</string>
    <string name="unknown">Unknown</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">Hello world!  This is the text for the About Screen.</string>
    <string name="action_about">About BootUnlocker</string>
    <string name="model">Model</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="preferences_settings">settings</string>
    <string name="preferences_key_light_theme">light_theme</string>


</resources>
